--- a/Paper/prior.tex
+++ b/Paper/prior.tex
@@ -3,7 +3,7 @@
 
 In this section we detail previous work which investigates the impact of software on power consumption. A wealth of material also exists on architecture-level power optimization, however this is outside the scope of our study.\golden
 
-The ability to accurately measure a property is required in order to optimize for it. That said, reliable figures for power consumption are hard to obtain because complex hardware is required to measure instantaneous current at high temporal and currency resolutions. Several approachees  While each approach has its merits, not all are feasible tools for the average software engineer. Analytical Modelling and Architectural Simulation are both not suitable for this use case because they rely on intimate knowledge of the underlying hardware platform and are not 
+The ability to accurately measure a property is required in order to optimize for it. That said, reliable figures for power consumption are hard to obtain because complex hardware is required to measure instantaneous current at high temporal and currency resolutions. Several approaches  While each approach has its merits, not all are feasible tools for the average software engineer. Analytical Modelling and Architectural Simulation are both not suitable for this use case because they rely on intimate knowledge of the underlying hardware platform and are not 
 
 
 
